test/conformance/chainsaw/generating-policies/clone/nosync/clone-multiple-targets/.chainsaw-test/origin-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: origin-namespace
