test/conformance/chainsaw/generating-policies/clone/nosync/clone-multiple-targets/.chainsaw-test/secret-no-label-in-origin.yaml
apiVersion: v1
kind: Secret
metadata:
  name: my-secret-no-label
  namespace: origin-namespace
type: Opaque
data:
  username: YWRtaW4=
  password: cGFzc3dvcmQ=
