test/conformance/chainsaw/generating-policies/clone/nosync/clone-multiple-targets/.chainsaw-test/secret-with-label-in-origin.yaml
apiVersion: v1
kind: Secret
metadata:
  name: my-secret
  namespace: origin-namespace
  labels:
    label-key: label-value
type: Opaque
data:
  username: YWRtaW4=
  password: cGFzc3dvcmQ=
