test/conformance/chainsaw/generating-policies/clone/nosync/clone-multiple-targets/.chainsaw-test/secret-with-label-in-other-ns.yaml
apiVersion: v1
kind: Secret
metadata:
  name: my-secret-wrong-ns
  namespace: other-namespace
  labels:
    label-key: label-value
type: Opaque
data:
  username: YWRtaW4=
  password: cGFzc3dvcmQ=
