test/conformance/chainsaw/generating-policies/clone/nosync/clone-multiple-targets/.chainsaw-test/target-namespace-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: target-namespace-1
  labels:
    label-key: label-value
